bugfix overall readability issues

--- a/src/components/Circle.module.css
+++ b/src/components/Circle.module.css
@@ -14,6 +14,8 @@
   border-radius: 50%;
 
   background-color: var(--color-primary);
+
+  z-index: -1;
 }
 
 .circleSmall {
@@ -30,4 +32,6 @@
   border-radius: 50%;
 
   background-color: var(--color-primary);
+
+  z-index: -1;
 }
