--- a/src/components/Logo.module.css
+++ b/src/components/Logo.module.css
@@ -7,5 +7,5 @@
   filter: blur(3px);
   height: 15rem;
 
-  z-index: -2;
+  z-index: 0;
 }
